Archive2/de/3167cbbbf310f3/output
main.cpp: In function 'int main(int, char**)':
main.cpp:14:24: error: aggregate 'Server<NonDerived> x' has incomplete type and cannot be defined
     Server<NonDerived> x;
                        ^
